syntax = "proto3";

package borealis.v1beta1;

import 'info.proto';

option go_package = "/proto";

service Commands {
  rpc Command(CommandRequest) returns (CommandResponse) {};
}

message CommandRequest {
  ActionTypes action_type = 1;

  oneof message {
    PlanRequest plan_request = 2;
    GetDatabasesCommandRequest get_databases_request = 3;
  }
}

message CommandResponse {
  ActionTypes action_type = 1;

  oneof message {
    PlanResponse plan_response = 2;
    GetDatabasesCommandResponse get_databases_response = 3;
  }
}

message PlanRequest {
  string query = 4;
  string database = 2;
  string instance_name = 5;
  string cluster_name = 7;
}

message GetDatabasesCommandRequest {
  string instance_name = 1;
}

message PlanResponse  {
  string plan = 1;
}

message GetDatabasesCommandResponse {
  repeated Database databases = 1;
}

enum ActionTypes {
  EXPLAIN = 0;
  GET_DATABASES = 1;
}